--- a/06_RA.md
+++ b/06_RA.md
@@ -13,7 +13,17 @@
 
 ***
 # RA-2
+![image](https://github.com/user-attachments/assets/3c341502-304b-4e0d-9bd0-700c951bc2af)  
 
+初めにChopperと答えたがダメそう…　　
+さらに絞り込んでみるとあった。
+![image](https://github.com/user-attachments/assets/a15a4200-ea4a-4a02-a006-ccc9e41d6cf5)
+
+`China Chopper`
+
+***
+
+# RA-3
 
 
 
