--- a/09_M.md
+++ b/09_M.md
@@ -12,6 +12,26 @@
 
 ***
 # M-3
+![image](https://github.com/user-attachments/assets/ebf3bc60-5c92-418c-b28b-0787b2399ad6)  
+
+この時間のセキュリティログを見ると下記のような記載があった。
+
+![image](https://github.com/user-attachments/assets/6e4fef91-19b2-43fb-ade5-94371085c7bf)  
+
+推察していくと、C:\Windows\System32\net1.exeがあるので「netコマンド」を使用していることがわかる。
+さらに、「セキュリティが有効なローカル グループ メンバーシップが列挙されました。」とあることから検索している。
+```
+グループ:
+	セキュリティ ID:		BUILTIN\Administrators
+	グループ名:		Administrators
+	グループ ドメイン:		Builtin
+```
+この記載から「Administrators」のローカルグループを検索している。
+以上のことから、  
+```
+net localgroup Administrators
+```
+となる。
 
 ***
 # M-4 
